--- a/comidas/lojass.html
+++ b/comidas/lojass.html
@@ -67,7 +67,7 @@
         <p>Schmitt Arte em Madeira</p>
     </div>
     <div class="item" onclick="openHtml('lojas/evc/evc.html')">
-        <img src="logos/evc.png" alt="evc">
+        <img src="logos/evc.gif" alt="evc">
         <p>evc</p>
     </div>
     <div class="item" onclick="openHtml('lojas/daca/index.html')">
