--- a/contrate/perfisc.html
+++ b/contrate/perfisc.html
@@ -3,86 +3,134 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Galeria de Fotos</title>
+<title>Galeria de Profissionais</title>
 <style>
-  body { font-family: Arial, sans-serif; background-color: #f9f9f9; margin: 0; padding: 0; }
-  .gallery { display: flex; flex-wrap: wrap; justify-content: center; padding: 10px; }
-  .photo { margin: 10px; width: calc(50% - 20px); }
-  .photo img { width: 100%; max-width: 200px; height: auto; }
-  .dropdown { position: relative; display: inline-block; }
-  .dropbtn { background-color: #464746; color: white; padding: 10px; font-size: 16px; border: none; cursor: pointer; }
-  .dropdown-content { display: none; position: absolute; background-color: #f9f9f9; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; }
-  .dropdown-content span { color: black; padding: 12px 16px; text-decoration: none; display: block; }
-  .dropdown-content span:hover { background-color: #f1f1f1 }
-  .show { display: block; }
-  .dark-mode { background-color: #333; color: white; position: fixed; top: 10px; right: 10px; padding: 5px; border-radius: 5px; cursor: pointer; }
+  body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  header {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 30px 10px;
+    font-size: 2em;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+    max-width: 1200px;
+  }
+
+  .photo {
+    margin: 15px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+    width: calc(33% - 30px);
+    background-color: white;
+  }
+
+  .photo:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+  }
+
+  .photo img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin: 20px 0;
+  }
+
+  .dropbtn {
+    background-color: #555;
+    color: white;
+    padding: 12px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  .dropbtn:hover {
+    background-color: #444;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+
+  .dropdown-content span {
+    color: #333;
+    padding: 15px 20px;
+    display: block;
+    transition: background-color 0.3s;
+  }
+
+  .dropdown-content span:hover {
+    background-color: #f0f0f0;
+  }
+
+  .show {
+    display: block;
+  }
+
+  .dark-mode {
+    background-color: #000;
+    color: white;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
 </style>
 </head>
 <body>
 
+<header>Galeria de Profissionais</header>
+
 <div class="dropdown">
-  <button onclick="toggleDropdown()" class="dropbtn">Categoria ▼</button>
+  <button onclick="toggleDropdown()" class="dropbtn">Escolher Categoria ▼</button>
   <div id="myDropdown" class="dropdown-content">
     <span onclick="filterCategory('auxiliares')">Auxiliares Administrativos</span>
     <span onclick="filterCategory('limpadores')">Limpadores de Quintal</span>
     <span onclick="filterCategory('outros')">Outras Categorias</span>
-    <!-- Adicione mais categorias aqui -->
   </div>
 </div>
 
-<div id="gallery" class="gallery">
-  <!-- As fotos e categorias serão inseridas aqui pelo JavaScript -->
-</div>
+<div id="gallery" class="gallery"></div>
 
 <button onclick="toggleDarkMode()" class="dark-mode">Modo Escuro</button>
-
-<script>
-// Restante do código permanece o mesmo
-// ...
-
-function toggleDarkMode() {
-  document.body.classList.toggle('dark-mode');
-}
-</script>
-
-</body>
-</html>
-
-
-<script>
-// Restante do código permanece o mesmo
-// ...
-
-function toggleDarkMode() {
-  document.body.classList.toggle('dark-mode');
-}
-</script>
-
-</body>
-</html>
-
-
-<script>
-// Restante do código permanece o mesmo
-// ...
-
-function toggleDarkMode() {
-  document.body.classList.toggle('dark-mode');
-}
-</script>
-
-</body>
-</html>
-
-
-<script>
-// Restante do código permanece o mesmo
-// ...
-</script>
-
-</body>
-</html>
-
 
 <script>
 var photos = [
@@ -90,7 +138,6 @@ var photos = [
   { src: 'auxiliar2.jpg', category: 'auxiliares', name: 'auxiliar2' },
   { src: 'limpador1.jpg', category: 'limpadores', name: 'limpador1' },
   { src: 'limpador2.jpg', category: 'limpadores', name: 'limpador2' },
-  // Adicione mais fotos aqui
 ];
 
 function toggleDropdown() {
@@ -120,7 +167,6 @@ window.onload = function() {
   });
 };
 
-// Fecha o dropdown se o usuário clicar fora dele
 window.onclick = function(event) {
   if (!event.target.matches('.dropbtn')) {
     var dropdowns = document.getElementsByClassName("dropdown-content");
@@ -131,6 +177,10 @@ window.onclick = function(event) {
       }
     }
   }
+}
+
+function toggleDarkMode() {
+  document.body.classList.toggle('dark-mode');
 }
 </script>
 
