--- a/contrate/perfisc.html
+++ b/contrate/perfisc.html
@@ -7,7 +7,8 @@
 <style>
   body {
     font-family: 'Poppins', sans-serif;
-    background-color: #f4f4f4;
+    background-color: #000;
+    color: white;
     margin: 0;
     padding: 0;
     display: flex;
@@ -16,13 +17,13 @@
   }
 
   header {
-    background-color: #333;
+    background-color: #1c1c1c;
     color: white;
     text-align: center;
     padding: 30px 10px;
     font-size: 2em;
     width: 100%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   }
 
   .gallery {
@@ -37,16 +38,22 @@
     margin: 15px;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
-    width: calc(33% - 30px);
-    background-color: white;
+    width: calc(50% - 30px);
+    background-color: #1e1e1e;
+  }
+
+  @media (max-width: 768px) {
+    .photo {
+      width: calc(100% - 30px);
+    }
   }
 
   .photo:hover {
     transform: translateY(-10px);
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
   }
 
   .photo img {
@@ -62,56 +69,56 @@
   }
 
   .dropbtn {
-    background-color: #555;
+    background-color: #3a3a3a;
     color: white;
-    padding: 12px 20px;
-    font-size: 16px;
+    padding: 14px 24px;
+    font-size: 18px;
     border: none;
-    border-radius: 5px;
+    border-radius: 30px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, transform 0.2s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   }
 
   .dropbtn:hover {
-    background-color: #444;
+    background-color: #555;
+    transform: scale(1.05);
   }
 
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: white;
-    min-width: 200px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    background-color: #2a2a2a;
+    min-width: 220px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
     z-index: 1;
-    border-radius: 5px;
+    border-radius: 10px;
     overflow: hidden;
   }
 
   .dropdown-content span {
-    color: #333;
+    color: white;
     padding: 15px 20px;
     display: block;
     transition: background-color 0.3s;
   }
 
   .dropdown-content span:hover {
-    background-color: #f0f0f0;
+    background-color: #404040;
   }
 
   .show {
     display: block;
   }
 
-  .dark-mode {
-    background-color: #000;
-    color: white;
+  .dark-mode-toggle {
+    background: none;
+    border: none;
     position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 15px;
-    border-radius: 25px;
+    top: 15px;
+    right: 15px;
+    font-size: 28px;
     cursor: pointer;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
 </style>
 </head>
@@ -130,7 +137,7 @@
 
 <div id="gallery" class="gallery"></div>
 
-<button onclick="toggleDarkMode()" class="dark-mode">Modo Escuro</button>
+<button onclick="toggleDarkMode()" class="dark-mode-toggle">🌙</button>
 
 <script>
 var photos = [
@@ -165,23 +172,8 @@ window.onload = function() {
     photoDiv.innerHTML = '<img src="' + photo.src + '" onclick="showProfile(\'' + photo.name + '\')">';
     gallery.appendChild(photoDiv);
   });
+  document.body.classList.add('dark-mode');
 };
-
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    for (var i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-
-function toggleDarkMode() {
-  document.body.classList.toggle('dark-mode');
-}
 </script>
 
 </body>
