--- a/contrate/perfisc.html
+++ b/contrate/perfisc.html
@@ -30,10 +30,16 @@
 
   .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     padding: 20px;
     max-width: 1200px;
+  }
+
+  @media (max-width: 600px) {
+    .gallery {
+      grid-template-columns: 1fr;
+    }
   }
 
   .photo {
