--- a/contrate/perfisc.html
+++ b/contrate/perfisc.html
@@ -31,9 +31,9 @@
   .gallery {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    gap: 10px;
     padding: 20px;
-    max-width: 1200px;
+    max-width: 600px;
   }
 
   @media (max-width: 600px) {
@@ -58,7 +58,8 @@
 
   .photo img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    object-fit: cover;
     display: block;
   }
 
