--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planejador de Viagens</title>
+    <title>Blog do Miranda vendas de passagens</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
@@ -63,15 +63,15 @@
         <i class="fas fa-anchor"></i> Escolha seu porto de partida
     </button>
     <ul id="ondeEsta">
-        <li onclick="selecionar('partida', 'Alenquer')">Alenquer</li>
-        <li onclick="selecionar('partida', 'Monte Alegre')">Monte Alegre</li>
-        <li onclick="selecionar('partida', 'Belterra')">Belterra</li>
-        <li onclick="selecionar('partida', 'Santarém')">Santarém</li>
-        <li onclick="selecionar('partida', 'Itaituba')">Itaituba</li>
-        <li onclick="selecionar('partida', 'Óbidos')">Óbidos</li>
-        <li onclick="selecionar('partida', 'Oriximiná')">Oriximiná</li>
-        <li onclick="selecionar('partida', 'Gurupá')">Gurupá</li>
-        <li onclick="selecionar('partida', 'Belterra')">Belterra</li>
+        <li onclick="selecionar('partida', '')">Alenquer</li>
+        <li onclick="selecionar('partida', 'Prainha')">Monte Alegre</li>
+        <li onclick="selecionar('partida', '')">Belterra</li>
+        <li onclick="selecionar('partida', '')">Santarém</li>
+        <li onclick="selecionar('partida', '')">Itaituba</li>
+        <li onclick="selecionar('partida', '')">Óbidos</li>
+        <li onclick="selecionar('partida', '')">Oriximiná</li>
+        <li onclick="selecionar('partida', '')">Gurupá</li>
+        <li onclick="selecionar('partida', '')">Belterra</li>
     </ul>
 
     <button id="botaoDestino" onclick="toggleList('ondeVai')" style="display:none;">
