--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -58,20 +58,20 @@
     </style>
 </head>
 <body>
-    <h1>Planejador de Viagens</h1>
+    <h1>Blog do Miranda vendas de passagens</h1>
     <button id="botaoPartida" onclick="toggleList('ondeEsta')">
         <i class="fas fa-anchor"></i> Escolha seu porto de partida
     </button>
     <ul id="ondeEsta">
         <li onclick="selecionar('partida', '')">Alenquer</li>
-        <li onclick="selecionar('partida', 'Prainha')">Monte Alegre</li>
-        <li onclick="selecionar('partida', '')">Belterra</li>
-        <li onclick="selecionar('partida', '')">Santarém</li>
-        <li onclick="selecionar('partida', '')">Itaituba</li>
-        <li onclick="selecionar('partida', '')">Óbidos</li>
-        <li onclick="selecionar('partida', '')">Oriximiná</li>
-        <li onclick="selecionar('partida', '')">Gurupá</li>
-        <li onclick="selecionar('partida', '')">Belterra</li>
+        <li onclick="selecionar('partida', 'Prainha')">Prainha</li>
+        <li onclick="selecionar('partida', '')"></li>
+        <li onclick="selecionar('partida', '')"></li>
+        <li onclick="selecionar('partida', '')"></li>
+        <li onclick="selecionar('partida', '')"></li>
+        <li onclick="selecionar('partida', '')"></li>
+        <li onclick="selecionar('partida', '')"></li>
+        <li onclick="selecionar('partida', '')"></li>
     </ul>
 
     <button id="botaoDestino" onclick="toggleList('ondeVai')" style="display:none;">
