--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -63,7 +63,7 @@
         <i class="fas fa-anchor"></i> Escolha seu porto de partida
     </button>
     <ul id="ondeEsta">
-        <li onclick="selecionar('partida', '')">Alenquer</li>
+        <li onclick="selecionar('partida', '')"></li>
         <li onclick="selecionar('partida', 'Prainha')">Prainha</li>
         <li onclick="selecionar('partida', '')"></li>
         <li onclick="selecionar('partida', '')"></li>
