--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -75,7 +75,10 @@
     </button>
     <ul id="ondeVai">
         <li onclick="selecionar('destino', 'Alenquer')">Alenquer</li>
+        <li onclick="selecionar('destino', 'Almeirim')">Almeirim</li>
         <li onclick="selecionar('destino', 'Monte Alegre')">Monte Alegre</li>
+        <li onclick="selecionar('destino', 'Manaus')">Manaus</li>
+        <li onclick="selecionar('destino', 'Belém')">Belém</li>
         <li onclick="selecionar('destino', 'Belterra')">Belterra</li>
         <li onclick="selecionar('destino', 'Santarém')">Santarém</li>
         <li onclick="selecionar('destino', 'Itaituba')">Itaituba</li>
