--- a/comidas/lojas/evc/evc.html
+++ b/comidas/lojas/evc/evc.html
@@ -77,6 +77,7 @@
         <li onclick="selecionar('destino', 'Alenquer')">Alenquer</li>
         <li onclick="selecionar('destino', 'Almeirim')">Almeirim</li>
         <li onclick="selecionar('destino', 'Monte Alegre')">Monte Alegre</li>
+        <li onclick="selecionar('destino', 'Macapá')">Macapá</li>
         <li onclick="selecionar('destino', 'Manaus')">Manaus</li>
         <li onclick="selecionar('destino', 'Belém')">Belém</li>
         <li onclick="selecionar('destino', 'Belterra')">Belterra</li>
