--- a/comidas/lojas/evc/Prainha/Santarém/domingo/domingo.html
+++ b/comidas/lojas/evc/Prainha/Santarém/domingo/domingo.html
@@ -92,12 +92,12 @@
     </header>
     <div class="navio-container">
         <div class="navio-card">
-            <img src="https://via.placeholder.com/300x200" alt="Navio Aurora">
-            <h3>Navio Aurora</h3>
-            <p>Preço: R$ 350,00</p>
-            <p>Embarque: 10:00</p>
-            <p>Chegada: 16:00</p>
-            <button onclick="comprarPassagem('Aurora', 350)">Comprar Passagem</button>
+            <img src="navio-bruno.jpg" alt="Navio Bruno">
+            <h3>Navio bruno</h3>
+            <p>Preço: R$ 90,00</p>
+            <p>Embarque: 19:00</p>
+            <p>Chegada: 08:30</p>
+            <button onclick="comprarPassagem('bruno', 350)">Comprar Passagem</button>
         </div>
         <div class="navio-card">
             <img src="https://via.placeholder.com/300x200" alt="Navio Estrela do Mar">
@@ -181,7 +181,7 @@
             }
 
             // Abre o WhatsApp com a mensagem
-            window.open(`https://wa.me/93984215097?text=${encodeURIComponent(mensagem)}`);
+            window.open(`https://wa.me/93984111006?text=${encodeURIComponent(mensagem)}`);
 
             // Fecha o modal de pagamento
             document.getElementById('modalPagamento').style.display = 'none';
