--- a/comidas/lojas/evc/Prainha/Santarém/domingo/domingo.html
+++ b/comidas/lojas/evc/Prainha/Santarém/domingo/domingo.html
@@ -100,7 +100,7 @@
             <button onclick="comprarPassagem('bruno', 350)">Comprar Passagem</button>
         </div>
         <div class="navio-card">
-            <img src="https://via.placeholder.com/300x200" alt="Navio Estrela do Mar">
+            <img src="exemplo.jpg" alt="Navio Estrela do Mar">
             <h3>Navio Estrela do Mar</h3>
             <p>Preço: R$ 450,00</p>
             <p>Embarque: 12:00</p>
@@ -108,7 +108,7 @@
             <button onclick="comprarPassagem('Estrela do Mar', 450)">Comprar Passagem</button>
         </div>
         <div class="navio-card">
-            <img src="https://via.placeholder.com/300x200" alt="Navio Oceano Azul">
+            <img src="exemplo.jpg" alt="Navio Oceano Azul">
             <h3>Navio Oceano Azul</h3>
             <p>Preço: R$ 500,00</p>
             <p>Embarque: 09:00</p>
