--- a/comidas/lojas/evc/Prainha/Santarém/domingo/domingo.html
+++ b/comidas/lojas/evc/Prainha/Santarém/domingo/domingo.html
@@ -92,12 +92,12 @@
     </header>
     <div class="navio-container">
         <div class="navio-card">
-            <img src="navio-bruno.jpg" alt="Navio Bruno">
-            <h3>Navio bruno</h3>
+            <img src="nm-são-bartolomeu-3.jpg" alt="N/M SÃO BARTOLOMEU III">
+            <h3>N/M SÃO BARTOLOMEU III</h3>
             <p>Preço: R$ 90,00</p>
             <p>Embarque: 19:00</p>
             <p>Chegada: 08:30</p>
-            <button onclick="comprarPassagem('bruno', 350)">Comprar Passagem</button>
+            <button onclick="comprarPassagem('N/M SÃO BARTOLOMEU III', 350)">Comprar Passagem</button>
         </div>
         <div class="navio-card">
             <img src="exemplo.jpg" alt="Navio Estrela do Mar">
