--- a/comidas/lojas/evc/Prainha/Santarém/sexta/sexta.html
+++ b/comidas/lojas/evc/Prainha/Santarém/sexta/sexta.html
@@ -97,7 +97,7 @@
             <p>Preço: R$ 90,00</p>
             <p>Embarque: 19:00</p>
             <p>Chegada: 08:30</p>
-            <button onclick="comprarPassagem('bruno', 350)">Comprar Passagem</button>
+            <button onclick="comprarPassagem('Navio Bruno', 350)">Comprar Passagem</button>
         </div>
         <div class="navio-card">
             <img src="exemplo.jpg" alt="Navio Estrela do Mar">
