--- a/comidas/lojas/evc/Prainha/Santarém/sexta/sexta.html
+++ b/comidas/lojas/evc/Prainha/Santarém/sexta/sexta.html
@@ -93,7 +93,7 @@
     <div class="navio-container">
         <div class="navio-card">
             <img src="navio-bruno.jpg" alt="Navio Bruno">
-            <h3>Navio bruno</h3>
+            <h3>Navio Bruno</h3>
             <p>Preço: R$ 90,00</p>
             <p>Embarque: 19:00</p>
             <p>Chegada: 08:30</p>
