--- a/taxi.html
+++ b/taxi.html
@@ -201,7 +201,7 @@
       name: "Barco A", 
       destination: "Santarém", 
       days: ["Segunda", "Quarta", "Sexta"], 
-      image: "\nm-são-bartolomeu-3.jpg", 
+      image: "nm-são-bartolomeu-3.jpg", 
       price: "R$ 120,00", 
       boarding: "08:00", 
       arrival: "10:00" 
